name:          dfinity-radix-tree
version:       0.0.0
synopsis:      DFINITY radix tree.
homepage:      https://github.com/dfinity/hs-dfinity-radix-tree
license:       GPL-3
license-file:  LICENSE
author:        Enzo Haussecker <enzo@dfinity.org>
maintainer:    DFINITY USA Research <team@dfinity.org>
copyright:     2018 DFINITY Stiftung
category:      DFINITY
build-type:    Simple
cabal-version: >=1.10

library
   build-depends:
      base,
      bytestring,
      leveldb-haskell,
      serialise
   default-language:
      Haskell2010
   exposed-modules:
      Network.DFINITY.RadixTree
   ghc-options:
      -O2
      -Wall
   hs-source-dirs:
      src
