name:          dfinity-radix-tree
version:       0.0.0
synopsis:      DFINITY radix tree.
homepage:      https://github.com/dfinity/hs-dfinity-radix-tree
license:       GPL-3
license-file:  LICENSE
author:        Enzo Haussecker <enzo@dfinity.org>
maintainer:    DFINITY USA Research <team@dfinity.org>
copyright:     2018 DFINITY Stiftung
category:      DFINITY
build-type:    Simple
cabal-version: >=1.10

library
   build-depends:
      base,
      bytestring,
      lens-simple,
      leveldb-haskell,
      lrucaching,
      serialise
   default-language:
      Haskell2010
   exposed-modules:
      Network.DFINITY.RadixTree.Bits
      Network.DFINITY.RadixTree.Lenses
      Network.DFINITY.RadixTree.Types
   ghc-options:
      -O2
      -Wall
      -fno-warn-missing-signatures
   hs-source-dirs:
      src

test-suite radix-tree-unit-tests
   build-depends:
      HUnit,
      base,
      base16-bytestring,
      bytestring,
      dfinity-radix-tree,
      serialise
   default-language:
      Haskell2010
   hs-source-dirs:
      test
   main-is:
      Test.hs
   type:
      exitcode-stdio-1.0
